crates/oxc_css/tests/error/qualified-rule/unexpected-comma.snap
---
source: crates/oxc_css/tests/error.rs
---
error: CSS rule is expected
  ┌─ unexpected-comma.css:4:4
  │
4 │   },
  │    ^


